[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
log = "0.4.22"
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
xxhash-rust = { version = "0.8.5", features = ["const_xxh3", "xxh3"] }
