[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
base64 = "0.22.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
mongodb = "3.1.0"
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"]}
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
